# Reaper-LLM

./: CMakeLists.txt  LICENSE  README.md  implementation_plan.md
src/: config.cpp  gui.cpp  gui.h  plugin.cpp
